# IndigoStar

./: .gitignore  .upload.env.example  CMakeLists.txt  KERNEL_REPORT.md  README.md  USAGE.md  bench_a100_cuda124_industrial.csv  bench_a100_hgemm_results.csv  cutlass  upload_to_server.sh  upload_with_pass.sh
.cache/clangd/index/: main.cu.3BF68B32B3CD6D62.idx  main.cu.B6621C5C3D76D7EE.idx  sgemm.cuh.5EE5FE36A3442161.idx  sgemm.cuh.C58B4564002C2A6D.idx  sgemm_128x128x32.cuh.655BF6DD2EA641DD.idx  sgemm_128x128x32_K2.cuh.2408C3FEE90FF1FB.idx  sgemm_128x128x32_K4.cuh.50FD9C0F0659D81C.idx  sgemm_128x128x32_double_buffer_dev.cuh.7E9516C323AC02CA.idx  sgemm_128x128x32_double_buffer_kimi.cuh.C17A8A5D9C4759E9.idx  sgemm_128x128x32_double_buffer_low_occupancy.cuh.E8277160BE055C1A.idx  sgemm_128x128x32_trial.cuh.152FD17E4DA2BE06.idx  sgemm_common.cuh.37B4DC1A830773C1.idx  sgemm_naive.cuh.5878618645E4FB89.idx
bak/: ref.txt  sm90_hgemm_pingpong.cuh
bench_csv/: BENCH_REPORT_A100_INDUSTRIAL.md
build_multi/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_sm90/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  learn_cuda
calc/: index.html  roofline.html
draw/: temp.excalidraw
ncu_reports/: cute_hgemm_no_reg_prefetch.ncu-rep  cute_hgemm_no_reg_prefetch_source_stalls.txt  cute_hgemm_no_reg_prefetch_source_stalls_min.txt  cute_hgemm_reg_prefetch.ncu-rep  cute_hgemm_reg_prefetch_source_stalls.txt  cute_hgemm_reg_prefetch_source_stalls_min.txt
note/: cute_hgemm_register_prefetch_short_dependency_note.md  cutlass_stage5_alignment_report.md  sgemm_custom_vs_external_nodb_note.md  sgemm_double_buffer_note.md  sgemm_external_nodb_fast_reason_note.md  sgemm_occupancy_wave_note.md  sgemm_simt_tensorcore_optimization_lesson.md
ref/: cute_ampere_hgemm_16816.cuh  sgemm.txt
scripts/: bench.sh  build.sh  gen_kernel_report.py  verify.sh
src/: main.cu  sgemm.cuh
src/core/: benchmark.cu  benchmark.h  cli.cu  cli.h  data_utils.h  device_utils.h  verify.h
src/kernels/: cluster.cuh  common.hpp  cute_ampere_hgemm_16816.cuh  cute_ampere_hgemm_16816_no_reg_prefetch.cuh  cute_hgemm_128x128_nn.cuh  cute_hgemm_128x128_nn_no_reg_prefetch.cuh  cutlass_hgemm_tensorop.cuh  cutlass_like_sgemm_128x128x8stage5.cuh  sgemm_128x128x32.cuh  sgemm_128x128x32_K2.cuh  sgemm_128x128x32_K4.cuh  sgemm_128x128x32_double_buffer_dev.cuh  sgemm_128x128x32_double_buffer_kimi.cuh  sgemm_128x128x32_double_buffer_low_occupancy.cuh  sgemm_128x128x32_trial.cuh  sgemm_common.cuh  sgemm_external_128x128x16.cuh  sgemm_naive.cuh  sm80_hgemm.cuh  sm90_hgemm_cooperative.cuh  sm90_hgemm_pingpong.cuh
src/kernels/reference/: sgemm_naive.cuh
src/kernels/sm80/hgemm/cutlass/: tensorop.cuh
src/kernels/sm80/hgemm/handwritten/: cute_128x128_nn.cuh  cute_128x128_nn_no_reg_prefetch.cuh  cute_ampere_16816_no_reg_prefetch.cuh  sm80_hgemm.cuh
src/kernels/sm80/sgemm/cutlass/: ref_stage5.cuh
src/kernels/sm80/sgemm/handwritten/: custom_128x128x32.cuh  cutlass_like_stage5.cuh  double_buffer_dev_128x128x32.cuh  external_128x128x16.cuh
src/kernels/sm90/: cluster.cuh  gemmPersistentTileScheduler.cuh  mbarrier.cuh
src/kernels/sm90/hgemm/cutlass/: cooperative.cuh  sm90_hgemm.cuh
src/kernels/sm90/hgemm/handwritten/: bf16_ref.cuh  cooperative.cuh  pingpong.cuh
